--- a/src/metadb/PubChem.MySql/test/test.vbproj
+++ b/src/metadb/PubChem.MySql/test/test.vbproj
@@ -132,9 +132,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
+    <ProjectReference Include="..\..\..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\47-dotnet_Microsoft.VisualBasic.vbproj">
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>47-dotnet_Microsoft.VisualBasic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Chemoinformatics\Chemoinformatics.vbproj">
+      <Project>{C3FAF972-2D6D-4FCB-8E1F-A66FE130D485}</Project>
+      <Name>Chemoinformatics</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Massbank\Massbank.vbproj">
       <Project>{a686bdf5-077f-47f5-a8dd-c73e6e88363c}</Project>
