--- a/Rscript/R/mzkit/DESCRIPTION
+++ b/Rscript/R/mzkit/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: mzkit
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Mass Spectrometry Toolkit
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: xieguigang
+Maintainer: xieguigang <gg.xie@bionovogene.com>
+Description: Provides pure R api function for process mz data in 
+    Mass Spectrometry data analysis pipeline from bionovogene corporation.
+License: MIT
 Encoding: UTF-8
 LazyData: true
