--- a/src/assembly/mz/mz.vbproj
+++ b/src/assembly/mz/mz.vbproj
@@ -180,7 +180,7 @@
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>47-dotnet_Microsoft.VisualBasic</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\mime\application%25json\application.json.vbproj">
+    <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\mime\application%25json\application.json.vbproj">
       <Project>{32228818-26f1-44df-8d40-347136c743cd}</Project>
       <Name>application.json</Name>
     </ProjectReference>
