--- a/src/mzkit/mzkit/mzkit.vbproj
+++ b/src/mzkit/mzkit/mzkit.vbproj
@@ -95,7 +95,7 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>vs.ico</ApplicationIcon>
+    <ApplicationIcon>chemistry.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Windows.Ribbon">
@@ -341,6 +341,8 @@
     <None Include="RibbonItems.Designer.cs" />
     <None Include="Resources\StatusAnnotations_Warning_32xLG_color.png" />
     <None Include="Resources\spinner.gif" />
+    <None Include="Resources\42082.png" />
+    <Content Include="chemistry.ico" />
     <Content Include="RibbonMarkup.h" />
     <Content Include="RibbonMarkup.xml" />
     <None Include="Resources\header-foreground-image.png" />
