--- a/src/mzkit/Task/Task.vbproj
+++ b/src/mzkit/Task/Task.vbproj
@@ -87,6 +87,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Math.vb" />
     <Compile Include="SpectrumProperty.vb" />
     <Compile Include="Raw.vb" />
     <Compile Include="ImportsRawData.vb" />
@@ -153,6 +154,10 @@
     <ProjectReference Include="..\..\assembly\assembly\assembly.vbproj">
       <Project>{95f7d65e-9db1-4605-9fd3-25433277af88}</Project>
       <Name>assembly</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\metadb\Chemoinformatics\Chemoinformatics.vbproj">
+      <Project>{C3FAF972-2D6D-4FCB-8E1F-A66FE130D485}</Project>
+      <Name>Chemoinformatics</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\mzmath\ms2_math-core\MassSpectrum.math-core.vbproj">
       <Project>{a2130297-2b4a-4b02-80b2-5cfa860f6dae}</Project>
