--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -722,11 +722,11 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
-  <Import Project="..\..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets" Condition="Exists('..\..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets'))" />
+    <Error Condition="!Exists('..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets'))" />
   </Target>
+  <Import Project="..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets" Condition="Exists('..\packages\ConEmu.Core.20.7.13\build\ConEmu.Core.Targets')" />
 </Project>
