--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -249,6 +249,12 @@
     <Compile Include="pages\dockWindow\documents\frmPlotViewer.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmSearchList.Designer.vb">
+      <DependentUpon>frmSearchList.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmSearchList.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\toolkit\PlotTooltip.vb">
       <SubType>Component</SubType>
     </Compile>
@@ -298,12 +304,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\PropertyWindow.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="pages\dockWindow\frmSearchList.Designer.vb">
-      <DependentUpon>frmSearchList.vb</DependentUpon>
-    </Compile>
-    <Compile Include="pages\dockWindow\frmSearchList.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\explorer\frmFileTree.Designer.vb">
@@ -463,14 +463,14 @@
     <EmbeddedResource Include="pages\dockWindow\documents\frmPlotViewer.resx">
       <DependentUpon>frmPlotViewer.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\explorer\frmSearchList.resx">
+      <DependentUpon>frmSearchList.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\frmSettings.resx">
       <DependentUpon>frmSettings.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\R\frmRsharp.resx">
       <DependentUpon>frmRsharp.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="pages\dockWindow\frmSearchList.resx">
-      <DependentUpon>frmSearchList.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\frmStartPage.resx">
       <DependentUpon>frmStartPage.vb</DependentUpon>
