--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -249,10 +249,16 @@
     <Compile Include="pages\dockWindow\documents\frmPlotViewer.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="pages\dockWindow\explorer\frmSearchList.Designer.vb">
-      <DependentUpon>frmSearchList.vb</DependentUpon>
+    <Compile Include="pages\dockWindow\explorer\frmRawFeaturesList.Designer.vb">
+      <DependentUpon>frmRawFeaturesList.vb</DependentUpon>
     </Compile>
-    <Compile Include="pages\dockWindow\explorer\frmSearchList.vb">
+    <Compile Include="pages\dockWindow\explorer\frmRawFeaturesList.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmFileExplorer.Designer.vb">
+      <DependentUpon>frmFileExplorer.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmFileExplorer.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\toolkit\PlotTooltip.vb">
@@ -304,12 +310,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\PropertyWindow.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="pages\dockWindow\explorer\frmFileTree.Designer.vb">
-      <DependentUpon>frmFileTree.vb</DependentUpon>
-    </Compile>
-    <Compile Include="pages\dockWindow\explorer\frmFileTree.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\base\ToolWindow.Designer.vb" />
@@ -457,14 +457,8 @@
       <DependentUpon>frmRScriptEdit.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\DummyPropertyWindow.resx" />
-    <EmbeddedResource Include="pages\dockWindow\explorer\frmFileTree.resx">
-      <DependentUpon>frmFileTree.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\documents\frmPlotViewer.resx">
       <DependentUpon>frmPlotViewer.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="pages\dockWindow\explorer\frmSearchList.resx">
-      <DependentUpon>frmSearchList.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\frmSettings.resx">
       <DependentUpon>frmSettings.vb</DependentUpon>
